# gamex

./: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  start-validator.sh  vite.config.ts
api/: .env.example  Cargo.toml  README.md  docker-compose.yml
api/src/: db.rs  handlers.rs  main.rs  models.rs
src/: App.css  app.tsx  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AddFavoriteDialog.tsx  FavoritesBar.tsx  GameCard.tsx  GameDetailsDialog.tsx  GameForm.tsx  GameLauncher.tsx  Header.tsx  LatestGameCard.tsx  MarketplaceFilters.tsx  MarketplaceGameCard.tsx  PrivateKeyDialog.tsx  SettingsDialog.tsx
src/components/ui/: badge.tsx  button.tsx
src/config/: env.ts
src/hooks/: use-balance.tsx  use-debounce.ts
src/hooks/mutations/: use-download-game-mutation.ts  use-purchase-game-mutation.ts  use-register-game-mutation.ts  use-uninstall-game-mutation.ts
src/hooks/queries/: use-all-marketplace-games-query.ts  use-balance-query.ts  use-library-games-query.ts  use-marketplace-game-query.ts  use-marketplace-search-query.ts
src/lib/: ipfs.ts  query-client.ts  solana.ts
src/lib/api/: game-api.service.ts  types.ts
src/lib/blockchain/: connection.ts  nft-collection.ts  umi-instance.ts  utils.ts  wallet.ts
src/lib/file-storage/: interfaces.ts  ipfs.ts
src/providers/: favorites.provider.tsx  settings.provider.tsx  user.provider.tsx
src/routes/: __root.tsx  create.tsx  index.tsx  library.tsx  login.tsx  marketplace.tsx
(+18 files in other folders)
