[package]
name = "gamex-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.1"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
